--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
         <!-- App Header -->
         <div class="appHeader">
             <div class="pageTitle">
-                <img src="assets/img/Informasi-Samsat.png" width="240" height="27" alt="Informasi Samsat Nasional" class="logo">
+                <img src="assets/img/Informasi-Samsat.png" width="240" height="27" alt="Informasi Samsat Nasional"
+                    class="logo">
             </div>
         </div>
         <!-- * App Header -->
@@ -99,7 +100,8 @@
                 <!-- app footer -->
                 <footer role="contentinfo">
                     <div class="appFooter">
-                        <img src="assets/img/Logo-Samsat-Dot-Info.png" width="240" height="27px !important" alt="icon" class="footer-logo mb-2">
+                        <img src="assets/img/Logo-Samsat-Dot-Info.png" width="240" height="27px !important" alt="icon"
+                            class="footer-logos mb-2">
                         <div class="footer-title">
                             Copyright © Samsat Dot Info 2022.
                         </div>
@@ -155,6 +157,9 @@
 
                     <!-- profile box -->
                     <div class="profileBox">
+                        <div class="image-wrapper">
+                            <img src="assets/img/icon/96x96.png" alt="image" class="imaged rounded">
+                        </div>
                         <div class="in">
                             <strong id="prevLoc"></strong>
                             <div class="text-muted">
