--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -535,6 +535,9 @@
 
                     <!-- profile box -->
                     <div class="profileBox">
+                        <div class="image-wrapper">
+                            <img src="assets/img/icon/96x96.png" alt="image" class="imaged rounded">
+                        </div>
                         <div class="in">
                             <strong id="prevLoc"></strong>
                             <div class="text-muted">
