Fix Icon Sidebar

--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -963,7 +963,7 @@
                     <!-- profile box -->
                     <div class="profileBox">
                         <div class="image-wrapper">
-                            <img src="assets/img/icon/96x96.png" alt="image" class="imaged rounded">
+                            <img src="assets/img/Icon-Sidebar.png" alt="image" class="imaged rounded">
                         </div>
                         <div class="in">
                             <strong id="prevLoc"></strong>
