--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -536,7 +536,7 @@
                     <!-- profile box -->
                     <div class="profileBox">
                         <div class="image-wrapper">
-                            <img src="assets/img/icon/96x96.png" alt="image" class="imaged rounded">
+                            <img src="assets/img/Icon-Sidebar.png" alt="image" class="imaged rounded">
                         </div>
                         <div class="in">
                             <strong id="prevLoc"></strong>
