--- a/public/index.html
+++ b/public/index.html
@@ -85,12 +85,13 @@
                             alt="image">
                         <div class="card-body">
                             <h1 class="card-subtitle">Petunjuk</h1>
-                            <h2 class="card-title">Balik Nama Motor & Mobil</h2>
+                            <h2 class="card-title">Cara, Syarat dan Proses</h2>
                             <p class="card-text">
-                                Estimasi tarif biaya yang harus dibayarkan untuk melakukan proses Balik Nama motor dan
+                                Petunjuk cara, syarat dan proses Mutasi Kendaraan, Balik Nama, Kehilangang STNK,
+                                Pembayaran Pajak Kendaraan Bermotor, dan lain-lain untuk Jenis Kendaraan motor dan
                                 mobil secara terperinci.
                             </p>
-                            <a href="tarif-pnbp-kendaraan-bermotor.html" class="btn btn-primary">
+                            <a href="syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html" class="btn btn-primary">
                                 Klik Disini
                             </a>
                         </div>
