--- a/public/berita.html
+++ b/public/berita.html
@@ -8,11 +8,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Berita & Informasi Pajak Kendaraan Bermotor</title>
+    <title>Berita Samsat</title>
     <meta name="description"
         content="Berita dan Informasi terkini mengenai Samsat dan Pajak Kendaraan Bermotor, Bebas Pajak, Pemutihan, Diskon Pajak, Bebas Balik Nama dan Mutasi Motor dan Mobil">
-    <meta name="keywords" content="Berita, Samsat, Pajak, Informasi, Kendaraan, Bermotor" />
-    <meta property="og:title" content="Samsat Dot Info" />
+    <meta name="keywords" content="Berita, Samsat, Pajak, Informasi, Kendaraan, Bermotor, Mutasi, Pemutiham, Bebas Pajak, Diskon Pajak" />
+    <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
     <meta property="og:url" content="https://samsat.info" />
