--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Cek Pajak Kendaraan Bermotor Online</title>
+    <title>Cek Pajak Online</title>
     <meta name="description" content="Cek Pajak Kendaraan Bermotor Mobil Motor Samsat Online Se-Indonesia">
     <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Mobil, Motor ,Samsat, Online, Indonesia" />
-    <meta property="og:title" content="Samsat Dot Info" />
+    <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
     <meta property="og:url" content="https://samsat.info" />
