--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Informasi Samsat</title>
-    <meta name="description" content="Informasi Samsat Indonesia">
-    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Samsat, Online, Indonesia" />
-    <meta property="og:title" content="Samsat Dot Info" />
+    <title>Info Samsat</title>
+    <meta name="description" content="Informasi Samsat Nasional">
+    <meta name="keywords" content="Informasi, Samsat, Online, Cek, Pajak, Kendaraan, Bermotor, Indonesia" />
+    <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, Biaya Balik Nama dan Biaya Mutasi." />
     <meta property="og:url" content="https://samsat.info" />
