--- a/public/kalkulator-pajak-kendaraan-bermotor.html
+++ b/public/kalkulator-pajak-kendaraan-bermotor.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Kalkulator Pajak Kendaraan Bermotor</title>
+    <title>Kalkulator Pajak</title>
     <meta name="description" content="Kalkulator Pajak Kendaraan Bermotor">
-    <meta name="keywords" content="Cek Pajak, Kalkulator, Pajak, Kendaraan Bermotor, Samsat, Online, Indonesia" />
-    <meta property="og:title" content="Samsat Dot Info" />
+    <meta name="keywords" content="Kalkulator, Pajak, Kendaraan, Bermotor, Samsat, Online, Indonesia" />
+    <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
     <meta property="og:url" content="https://samsat.info" />
