--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -8,11 +8,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Syarat, Proses Biaya dan Cara Bayar Pajak, Mutasi & Balik Nama Kendaraan Bermotor</title>
+    <title>Syarat, Proses dan Cara</title>
     <meta name="description"
-        content="Tata cara dan peraturan mengenai Balik Nama, BPKB, Mutasi, STNK Kendaraan Bermotor baik Motor maupun Mobil">
-    <meta name="keywords" content="Cara, Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
-    <meta property="og:title" content="Samsat Dot Info" />
+        content="Syarat, Proses dan Cara Bayar Pajak, Mutasi, Balik Nama, Kehilangan STNK Kendaraan Bermotor baik jenis Motor maupun Mobil">
+    <meta name="keywords" content="Cara, Proses, Biaya Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
+    <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
     <meta property="og:url" content="https://samsat.info" />
