--- a/public/404.html
+++ b/public/404.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Samsat Dot Info</title>
-    <meta name="description" content="Samsat Dot Info - 404">
+    <title>Info Samsat - 404</title>
+    <meta name="description" content="Info Samsat - Not Found 404">
     <meta name="keywords" content="Samsat, Informasi, Error, 404" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
