Fix Display Desktop

--- a/public/berita.html
+++ b/public/berita.html
@@ -11,7 +11,8 @@
     <title>Berita Samsat</title>
     <meta name="description"
         content="Berita dan Informasi terkini mengenai Samsat dan Pajak Kendaraan Bermotor, Bebas Pajak, Pemutihan, Diskon Pajak, Bebas Balik Nama dan Mutasi Motor dan Mobil">
-    <meta name="keywords" content="Berita, Samsat, Pajak, Informasi, Kendaraan, Bermotor, Mutasi, Pemutiham, Bebas Pajak, Diskon Pajak" />
+    <meta name="keywords"
+        content="Berita, Samsat, Pajak, Informasi, Kendaraan, Bermotor, Mutasi, Pemutiham, Bebas Pajak, Diskon Pajak" />
     <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
@@ -52,6 +53,8 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
+                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                    Smartphone/Seluler</span>
                 <div class="section full mt-2 mb-2">
                     <div class="section-title">Berita Samsat</div>
                     <div class="wide-block pt-2 pb-1">
