--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -53,6 +53,8 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
+                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                    Smartphone/Seluler</span>
                 <div class="section full mt-2">
                     <div class="section-title">Cek Pajak Kendaraan</div>
                     <div class="wide-block pt-2 pb-1">
