--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
+                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                    Smartphone/Seluler</span>
                 <div class="section mt-3 mb-3">
                     <div class="card">
                         <img src="assets/img/banner/Cek-pajak-online.webp" width="328" height="164" class="card-img-top"
@@ -91,7 +93,8 @@
                                 Pembayaran Pajak Kendaraan Bermotor, dan lain-lain untuk Jenis Kendaraan motor dan
                                 mobil secara terperinci.
                             </p>
-                            <a href="syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html" class="btn btn-primary">
+                            <a href="syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html"
+                                class="btn btn-primary">
                                 Klik Disini
                             </a>
                         </div>
