--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -11,7 +11,8 @@
     <title>Syarat, Proses dan Cara</title>
     <meta name="description"
         content="Syarat, Proses dan Cara Bayar Pajak, Mutasi, Balik Nama, Kehilangan STNK Kendaraan Bermotor baik jenis Motor maupun Mobil">
-    <meta name="keywords" content="Cara, Proses, Biaya Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
+    <meta name="keywords"
+        content="Cara, Proses, Biaya Mekanisme, Balik Nama, Mutasi, BPKB, Kehilangan STNK, Motor, Mobil" />
     <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
@@ -54,6 +55,8 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
+                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                    Smartphone/Seluler</span>
                 <div class="section full mt-2 mb-2">
                     <div class="section-title">Syarat, Proses dan Cara</div>
                     <div class="wide-block pt-2 pb-1">
