--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -9,8 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>Tarif PNBP</title>
-    <meta name="description" content="Tarif dan Biaya Balik Nama, Mutasi, BPKB, SIM dan Pajak Kendaraan Bermotor dan Mobil">
-    <meta name="keywords" content="Tarif, Biaya, Pajak, Motor, Mobil, STNK, Balik Nama, BPKB, SIM, Mutasi, Kendaraan, Bermotor, Mobil" />
+    <meta name="description"
+        content="Tarif dan Biaya Balik Nama, Mutasi, BPKB, SIM dan Pajak Kendaraan Bermotor dan Mobil">
+    <meta name="keywords"
+        content="Tarif, Biaya, Pajak, Motor, Mobil, STNK, Balik Nama, BPKB, SIM, Mutasi, Kendaraan, Bermotor, Mobil" />
     <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, dll." />
@@ -53,6 +55,8 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
+                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                    Smartphone/Seluler</span>
                 <div class="section full mt-2 mb-2">
                     <div class="section-title">Tarif Penerimaan Negara Bukan Pajak</div>
                     <div class="wide-block pt-2 pb-1">
