--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
-                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                <span class="alert-text">Tampilan Website ini hanya baik bila dilihat di Browser
                     Smartphone/Seluler</span>
                 <div class="section mt-3 mb-3">
                     <div class="card">
