--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -55,7 +55,7 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
-                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                <span class="alert-text">Tampilan Website ini hanya baik bila dilihat di Browser
                     Smartphone/Seluler</span>
                 <div class="section full mt-2 mb-2">
                     <div class="section-title">Syarat, Proses dan Cara</div>
