--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -53,7 +53,7 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
-                <span class="alert-text">Tampilan Website ini hanya bagus bila dilihat di Browser
+                <span class="alert-text">Tampilan Website ini hanya baik bila dilihat di Browser
                     Smartphone/Seluler</span>
                 <div class="section full mt-2">
                     <div class="section-title">Cek Pajak Kendaraan</div>
