--- a/public/kalkulator-pajak-kendaraan-bermotor.html
+++ b/public/kalkulator-pajak-kendaraan-bermotor.html
@@ -61,7 +61,11 @@
 
     <!-- App Capsule -->
     <div id="appCapsule">
-        <span class="alert-text">Tampilan Website ini hanya baik bila dilihat di Browser Smartphone/Seluler</span>
+        <span class="alert-text">
+            <center> - MOBILE BROWSER ONLY - <br> Website ini hanya dikhususkan untuk dilihat di
+                Browser
+                Smartphone/Seluler </center>
+        </span>
         <div class="error-page">
             <div class="mb-2">
                 <img src="assets/img/icon/384x384.png" width="200" height="200" alt="Cek Pajak Online"
