--- a/public/berita.html
+++ b/public/berita.html
@@ -53,8 +53,11 @@
         <!-- App Capsule -->
         <aside role="complementary">
             <div id="appCapsule">
-                <span class="alert-text">Tampilan Website ini hanya baik bila dilihat di Browser
-                    Smartphone/Seluler</span>
+                <span class="alert-text">
+                    <center> - MOBILE BROWSER ONLY - <br> Website ini hanya dikhususkan untuk dilihat di
+                        Browser
+                        Smartphone/Seluler </center>
+                </span>
                 <div class="section full mt-2 mb-2">
                     <div class="section-title">Berita Samsat</div>
                     <div class="wide-block pt-2 pb-1">
