--- a/public/kalkulator-pajak-kendaraan-bermotor.html
+++ b/public/kalkulator-pajak-kendaraan-bermotor.html
@@ -41,15 +41,13 @@
     <!-- * loader -->
 
     <!-- App Header -->
-    <div class="appHeader no-border transparent position-absolute">
+    <div class="appHeader bg-primary text-light">
         <div class="left">
             <a href="javascript:;" class="headerButton goBack">
-                <ion-icon name="chevron-back-outline"></ion-icon>
+                <material-icons class="material-icons-outlined">arrow_back_ios</material-icons>
             </a>
         </div>
         <div class="pageTitle">Under Construction</div>
-        <div class="right">
-        </div>
     </div>
     <!-- * App Header -->
 
@@ -65,7 +63,7 @@
                 <img src="assets/img/icon/384x384.png" width="200" height="200" alt="Cek Pajak Online"
                     class="imaged square w200">
             </div>
-            <h1 class="title">Akan Datang !!</h1>
+            <h1 class="title">Coming Soon</h1>
             <div id="countDown" class="mb-5"></div>
 
             <div class="fixed-footer">
