--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -25,11 +25,16 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7BEWWEY6N"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'G-Z7BEWWEY6N');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -161,6 +166,17 @@
                         </a>
                     </li>
                     <li>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+                            crossorigin="anonymous"></script>
+                        <!-- Iklan Display 300x100 -->
+                        <ins class="adsbygoogle" style="display:inline-block;width:300px;height:100px"
+                            data-ad-client="ca-pub-7701478875963146" data-ad-slot="9208621705"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </li>
+                    <li>
                         <a href="https://portal.bpdbali.id/infosamsat/" target="_blank" class="item" rel="noopener">
                             <div class="imageWrapper">
                                 <img src="assets/img/logo-provinsi/Logo_Bali.webp" width="64" height="64" alt="Bali"
@@ -212,7 +228,6 @@
                         </a>
                     </li>
                     <li>
-                    <li>
                         <a href="https://bpprd.sumutprov.go.id/e-samsat/pages/index.php?temp=menu3" target="_blank"
                             class="item" rel="noopener">
                             <div class="imageWrapper">
@@ -248,6 +263,17 @@
                                 </div>
                             </div>
                         </a>
+                    </li>
+                    <li>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+                            crossorigin="anonymous"></script>
+                        <!-- Iklan Display 300x100 -->
+                        <ins class="adsbygoogle" style="display:inline-block;width:300px;height:100px"
+                            data-ad-client="ca-pub-7701478875963146" data-ad-slot="9208621705"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </li>
                     <li>
                         <a href="http://jambisamsat.net/infopkb.html" target="_blank" class="item" rel="noopener">
@@ -328,6 +354,17 @@
                                 </div>
                             </div>
                         </a>
+                    </li>
+                    <li>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+                            crossorigin="anonymous"></script>
+                        <!-- Iklan Display 300x100 -->
+                        <ins class="adsbygoogle" style="display:inline-block;width:300px;height:100px"
+                            data-ad-client="ca-pub-7701478875963146" data-ad-slot="9208621705"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </li>
                     <li>
                         <a href="http://bappenda.papua.go.id/cekpajak.php" target="_blank" class="item" rel="noopener">
@@ -477,7 +514,7 @@
 
                 <!-- sidebar buttons -->
                 <div class="sidebar-buttons">
-                    
+
                 </div>
                 <!-- * sidebar buttons -->
             </div>
