--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,16 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7BEWWEY6N"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'G-Z7BEWWEY6N');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -83,6 +88,20 @@
                     <material-icons class="material-icons-outlined">arrow_upward</material-icons>
                 </a>
                 <!-- * Go To Top -->
+
+                <div class="section mt-3 mb-3">
+                    <div class="card">
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+                            crossorigin="anonymous"></script>
+                        <!-- Iklan Display 300x200 -->
+                        <ins class="adsbygoogle" style="display:inline-block;width:300px;height:200px"
+                            data-ad-client="ca-pub-7701478875963146" data-ad-slot="9810438698"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
+                </div>
 
                 <div class="section mt-3 mb-3">
                     <div class="card">
@@ -245,7 +264,7 @@
 
                 <!-- sidebar buttons -->
                 <div class="sidebar-buttons">
-                    
+
                 </div>
                 <!-- * sidebar buttons -->
             </div>
