--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -27,11 +27,16 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7BEWWEY6N"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'G-Z7BEWWEY6N');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -623,7 +628,7 @@
 
                 <!-- sidebar buttons -->
                 <div class="sidebar-buttons">
-                    
+
                 </div>
                 <!-- * sidebar buttons -->
             </div>
