--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -498,6 +498,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="adbox adbox-300-50">
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+                            crossorigin="anonymous"></script>
+                        <!-- Iklan Display 300x50 -->
+                        <ins class="adsbygoogle" style="display:inline-block;width:300px;height:50px"
+                            data-ad-client="ca-pub-7701478875963146" data-ad-slot="2451657570"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </div>
                 </div>
             </div>
         </aside>
