--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <title>Info Samsat</title>
     <meta name="description" content="Informasi Samsat Nasional">
     <meta name="keywords" content="Informasi, Samsat, Online, Cek, Pajak, Kendaraan, Bermotor, Indonesia" />
+    <meta name="google-site-verification" content="U54KI3RhAI5tg2Yr1Yl6AFqlWCYhwe1X6n2KUtTRf48" />
     <meta property="og:title" content="Info Samsat" />
     <meta property="og:description"
         content="Informasi lengkap Samsat dan Pajak Kendaraan Bermotor, Cara Balik Nama, Mutasi Kendaraan, Cek Pajak Online, Biaya Balik Nama dan Biaya Mutasi." />
