--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -1198,6 +1198,12 @@
     <script src="assets/js/base.js"></script>
     <!-- Geolocation Js File -->
     <script src="assets/js/geolocation.js" async></script>
+    <!-- Infolinks -->
+    <script type="text/javascript">
+        var infolinks_pid = 3353236;
+        var infolinks_wsid = 0;
+    </script>
+    <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
 </body>
 
