--- a/public/index.html
+++ b/public/index.html
@@ -358,6 +358,12 @@
     <script>
         AddtoHome("1000", "once");
     </script>
+    <!-- Infolinks -->
+    <script type="text/javascript">
+        var infolinks_pid = 3353236;
+        var infolinks_wsid = 0;
+    </script>
+    <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
 </body>
 
